# rs-unicode

./: .gitignore  README.md
docs/: character.md  common.md  encoding.md  enum.md  format.md  index.md  legacy.md  regex.md  string.md  version.md
notes/: file-dependencies.txt
src/: CMakeLists.txt  rs-unicode.hpp
src/rs-unicode/: character.hpp  encoding.cpp  encoding.hpp  enum.hpp  format.hpp  legacy.cpp  legacy.hpp  property-list.hpp  property-map.hpp  regex.cpp  regex.hpp  string.cpp  string.hpp  ucd-canonical-combining-class.cpp  ucd-canonical-composition-mapping.cpp  ucd-canonical-decomposition-mapping.cpp  ucd-case-folding.cpp  ucd-default-ignorable.cpp  ucd-east-asian-width.cpp  ucd-extended-pictographic.cpp  ucd-full-composition-exclusion.cpp  ucd-general-category.cpp  ucd-grapheme-cluster-break.cpp  ucd-id-compat-math-continue.cpp  ucd-id-compat-math-start.cpp  ucd-indic-conjunct-break.cpp  ucd-line-break.cpp  ucd-pattern-syntax.cpp  ucd-pattern-white-space.cpp  ucd-simple-lowercase-mapping.cpp  ucd-simple-titlecase-mapping.cpp  ucd-simple-uppercase-mapping.cpp  ucd-special-casing.cpp  ucd-subscript-superscript.cpp  ucd-white-space.cpp  ucd-xid-continue.cpp  ucd-xid-start.cpp  version.hpp
src/test/: character-properties-test.cpp  encoding-conversion-test.cpp  encoding-general-test.cpp  encoding-iterators-test.cpp  enum-test.cpp  format-test.cpp  legacy-test.cpp  property-map-test.cpp  regex-test.cpp  string-casing-test.cpp  string-conversion-test.cpp  string-iterators-test.cpp  string-literals-test.cpp  string-manipulation-test.cpp  string-properties-test.cpp  string-search-test.cpp  ucd-grapheme-break-test.cpp  ucd-normalization-test.cpp  unit-test.cpp  unit-test.hpp  version-test.cpp
